# EasyDB

./: .gitignore  AddressBook.db  EasyDB_Explorer.c  EasyDB_Explorer_wingui.c  EasyDB_Explorer_wingui.manifest  EasyDB_Explorer_wingui_gbk.c  EasyDB_icon.res  EasyDb_icon.rc  Example1_AddressBook.c  Example1_AddressBook_e.c  Example2_JLUCourseDesign2023_GradeManagementSystem.c  LICENSE  easydb.c  easydb.h  edbdef.h  edbdef_backup.h  index.c  index.h  interactive_test.c  interactive_test.db  readme.md  test.c  test.db  test00_interactive_test.c  test01_blob.c  test02_EUM_interactive_test.c  test03_double_type_primaryKey.c  test04_hugedata.c  test_blob.c  test_blob.db  test_primary_key_1.db  test_primary_key_2.db  test_primary_key_index.c
c_version/: easydb.c  easydb.h  usage.md
c_version/examples/EasyDBExplorer/: CMakeLists.txt  EasyDB_Explorer_wingui.c  EasyDB_icon.res  easydb.c  easydb.h
c_version/examples/SimpleExamples/: Example1_AddressBook.c  easydb.c  test00_interactive_test.c  test01_blob.c  test02_EUM_interactive_test.c  test03_double_type_primaryKey.c  test04_hugedata.c
cpp_version/: EasyDB.hpp  test.cpp  usage.md
cpp_version/examples/EasyDBExplorer/: CreateEasyDBDlg.cpp  CreateEasyDBDlg.h  EasyDB.hpp  EasyDBExplorer.cpp  EasyDBExplorer.h  EasyDBExplorer.rc  EasyDBExplorer.sln  EasyDBExplorer.vcxproj  EasyDBExplorer.vcxproj.filters  EasyDBExplorerDlg.cpp  EasyDBExplorerDlg.h  pch.h  resource.h  utils.h
cpp_version/examples/EasyDBInfo/: EasyDB.hpp  EasyDBInfo.cpp
cpp_version/examples/SimpleSQL/: SQLExec.hpp  SQLParser.hpp  SimpleSQL.cpp
(+1 files in other folders)
